# sample_gcp_pyspark

./: README.md  pyproject.toml  pyproject.toml_backup  requirements.txt
configs/: deploy.sh
dags/: crud_operations_bq_dag.py  gcs_to_bq_dag.py
data/: sample_data.csv
scripts/: bq_operations.py  gcs_to_bq.py  pubsub_prj1.py  pubsub_prj2.py
